# genx

./: .gitignore  .gitlab-ci.yml  README.md  README.txt  changelog.txt  data.py  datalist.py  diffev.py  event_handlers.py  filehandling.py  fom_funcs.py  genx.conf  genx.py  genx_gui.py  genx_gui.wxg  genx_mac_m1.spec  help.py  images.py  model.py  parametergrid.py  parameters.py  plotpanel.py  qt_py.txt  setup.py  sld_errorbars.py  snapcraft.yaml  solvergui.py  version.py  wx_py.txt
genx/: MANIFEST.in  README.txt  changelog.txt  create_release_notes.py  create_subreadme.py  data.py  datalist.py  diffev.py  event_handlers.py  filehandling.py  fom_funcs.py  genx.conf  genx.py  genx.spec  genx_gui.py  genx_gui.wxg  genx_mac.spec  genx_mac_m1.spec  help.py  images.py  io.py  make_deb.sh  model.py  parametergrid.py  parameters.py  plotpanel.py  setup.cfg  setup.py  setup_client.cfg  setup_server.cfg  setup_snap.cfg  sld_errorbars.py  solvergui.py  version.py
genx/debian_build/: application-x-genx.xml  application-x-orso.xml  control  copyright  genx.desktop  genx.xml  genx.xpm  make_deb.sh  postinst
genx/examples/: Peakfit_Gauss.gx  Peakfit_Gauss_coupled_pars.gx  SXRD.gx  X-ray_Reflectivity.gx  x-ray_specular.gx
genx/genx/: __init__.py  __main__.py  api.py  bumps_interface.py  bumps_optimizer.py  config.py  data.py  datalist.py  decorators.py  diffev.py  event_handlers.py  exception_handling.py  exceptions.py  filehandling.py  fom_funcs.py  genx.conf  genx_gui.py  genx_gui.wxg  gui_logging.py  help.py  images.py  levenberg_marquardt.py  model.py  model_actions.py  model_control.py  parametergrid.py  parameters.py  plotpanel.py  run.py  server.py  sld_errorbars.py  solver_basis.py  solvergui.py  version.py
genx/lib/: controls.py
genx/mac_build/: GenXBkg.xcf  conda_build.yml  genx.icns  genx_file.icns  orso.icns
genx/models/: interdiff.py  mag_refl.py  soft_nx.py  spec_nx.py  sxrd.py  sxrd2.py  sxrd_mult.py  utils.py  xmag.py
genx/plugins/: add_on_framework.py  data_loader_framework.py
genx/profiles/: Default.conf  Reflectivity.conf  SuperAdam.conf
genx/scripts/: genx  genx.py  genx.spec  genx_mac  genx_server
genx/tests/: __init__.py  full_model_performance.py  model_test.py  numba_performance.py  test_core_colors.py  test_core_config.py  test_core_h5_support.py  test_examples.py  test_hdf5_interface.py  test_instrument.py  test_model.py  test_models.py  (+9 more)
(+802 files in other folders)
