[metadata]
name = genx3server
version = attr: genx.version.__version__
author = Matts Bjorck, Artur Glavic
author_email = artur.glavic@psi.ch
description = X-ray and Neutron reflectivity fitting software. Non-GUI only package for servers.
long_description = file: README.txt
url = http://genx.sourceforge.net/
license = GPL v3
license_file = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Physics
    Development Status :: 3 - Alpha


[options]
python_requires = >=3.6
packages =
    genx
    genx.core
    genx.models
    genx.models.lib
    genx.plugins
    genx.plugins.add_ons
    genx.plugins.add_ons.help_modules
    genx.plugins.data_loaders
    genx.plugins.data_loaders.help_modules
    genx.plugins.add_ons.help_modules.slddb
    genx.plugins.add_ons.help_modules.slddb.element_table
    genx.remote
scripts =
    scripts/genx
    scripts/genx_server
install_requires =
    numpy
    scipy
    appdirs
    h5py
    orsopy
    requests
    numba
    mpi4py
include_package_data = True
