[metadata]
name = genx3
version = attr: genx.version.__version__
author = Matts Bjorck, Artur Glavic
author_email = artur.glavic@psi.ch
description = X-ray and Neutron reflectivity fitting software.
long_description = file: README.txt
url = http://genx.sourceforge.net/
license = GPL v3
license_file = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Physics
    Development Status :: 6 - Mature


[options]
python_requires = >=3.6
packages =
    genx
    genx.core
    genx.gui
    genx.models
    genx.models.lib
    genx.plugins
    genx.plugins.add_ons
    genx.plugins.add_ons.help_modules
    genx.plugins.data_loaders
    genx.plugins.data_loaders.help_modules
    genx.remote
scripts =
    scripts/genx
    scripts/genx_mac
    scripts/genx_server
install_requires =
    numpy
    matplotlib
    scipy
    appdirs
    h5py
    orsopy>=1.2.0
    wxpython
    requests
    docutils
    numba
    pint
    svgwrite
include_package_data = True
